Add basic chord conditioning

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
-    "@ben-hayes/magenta-music": "^1.12.2",
+    "@ben-hayes/magenta-music": "^1.12.4",
     "@tensorflow/tfjs-node": "^1.5.1",
     "@tensorflow/tfjs-node-gpu": "^1.5.1",
+    "chordjs": "^1.1.1",
     "node-fetch": "2.6.0"
   },
   "name": "southbank_ai",
