--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@ben-hayes/magenta-music": "^1.12.4",
     "@tensorflow/tfjs-node": "^1.5.1",
     "@tensorflow/tfjs-node-gpu": "^1.5.1",
+    "alert-node": "^2.1.1",
     "chordjs": "^1.1.1",
     "node-fetch": "2.6.0"
   },
